=1.0.8 (1/28/2014)=
* Fix for the "Identity Not Mapped" exception - Thanks to AdmiringWorm for figuring this out!
* Added a debug setting that causes MASGAU to provide progress info that is less human-friendly, but more useful for diagnosing issues.
* Added a setting to show undetected games that have archives in the backup folder, to make restoring easier for #98
* Changed the monitor column to disable the monitor checkbox if the game is undetected, or if it otherwise cannot be monitored (like if it's an android game).
* Resolved an issue with the restore system that would cause MASGAU to not make use of certain paths cached in archives for #102.


=1.0.6=
* Resolves a potential permissions issue with updated XML files in multi-user environments
* Fixes a default versioning unit not showing up in settings
* Fixes an error caused by new "other steam library" feature
* Fixed e-mailing errors causing a WTF exception
* Restored the "no archive data" error message, was showing a "string not found" exception in its place
* Resolved an issue causing some steam games to be detected twice
* Resolved empty game version identifiers getting written to the save archive
* Added support for a revision attribute on game versions, allowing the same game to appear multiple time (for deprecating entries)
* Fixed the downloading and temp steam folders being detected as users
* Archives from previous revisions of a game profile will show up in the current revision's archive list, but will stll use the deprecated paths for restoring

=1.0.4=
* Can now detect Steam games that have been installed on other drives through Steam's new feature that lets you do what I just said.

=1.0.2=
* Implemented custom List view to overcome the limitations of the stock one
* Added interface text to explain the restore process
* Changed the detect processs to, instead of throwing an exception, choosing a game when duplicates are found, and notifying the user of that choice